style.css
/* ... */
body {
    background-color: var(--background);
    color: var(--text-primary);
    font-family: var(--system-ui);
    margin: 0;
    padding: 0;
    font-size: var(--desktop-body);
    line-height: var(--lh-desktop-body);
    font-feature-settings: 'liga', 'dlig';
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-style: normal;
    min-height: 100vh;
    text-rendering: optimizeLegibility
}

body>#content {
    margin: 0px;
    max-width: 680px;
    width: 100%;
    margin: 0 auto;
    padding-bottom: var(--spacing-08);
}

#content>*+* { margin-bottom:var(--spacing-08, 1.5em); }

h1 { font-size: var(--desktop-heading-01); line-height: var(--lh-desktop-heading-01); letter-spacing: var(--desktop-tracking-heading-01);}
h2 { font-size: var(--desktop-heading-02); line-height: var(--lh-desktop-heading-02); letter-spacing: var(--desktop-tracking-heading-02);}
h3 { font-size: var(--desktop-heading-03); line-height: var(--lh-desktop-heading-03); letter-spacing: var(--desktop-tracking-heading-03);}
h4 { font-size: var(--desktop-heading-04); line-height: var(--lh-desktop-heading-04);}
h5 { font-size: var(--desktop-heading-05); line-height: var(--lh-desktop-heading-05);}
h6 { font-size: var(--desktop-heading-06); line-height: var(--lh-desktop-heading-06);}
code { font-size: var(--desktop-code); line-height: var(--lh-desktop-code);}

summary {
    cursor: pointer;
    text-decoration: underline;
}

li {
    list-style-type: '∘';
    padding-inline-start: 1ch;
}

h1, h2 {
    margin-top: var(--spacing-12);
    color: var(--text-primary);
}

h3, h4 {
    margin-top: var(--spacing-08);
    color: var(--text-primary);
}

hr {
    color: var(--border);
    height: 1px;
    flex: 0 1 auto;
    margin: 1em 0;
    padding: 0;
    border: none;
}

a {
    color: var(--link);
    text-decoration: none;
}

a:visited {
    color: var(--link-visited);
}

a:hover {
    color: var(--link-hover);
    text-decoration: underline;
}

pre {
    background-color: var(--background-secondary);
    line-height: 1.45;
    overflow: auto;
    padding: var(--spacing-06);
    font-size: var(--desktop-code);
    border-radius: var(--spacing-02);
    margin-bottom: var(--spacing-08);
}

code {
    background-color: var(--background-secondary);
    margin: 0;
    color: var(--pink4);
    word-wrap: break-word;
    padding: var(--spacing-00) var(--spacing-08);
    font-family: var(--system-code);
    font-size: var(--desktop-body-sm);
    border-radius: var(--spacing-02);
}

pre>code {
    background-color: transparent;
    border: 0;
    display: inline;
    line-height: inherit;
    margin: 0;
    overflow: visible;
    padding: 0;
    word-wrap: normal;
    font-size: var(--desktop-code);
    font-family: var(--system-code);
}

code.asciidoc {
    font-size: 12px;
    color: var(--text-primary);
}

code>* {
    font-family: var(--system-code);
}

.hljs-built_in,
.hljs-title.class_,
.hljs-class .hljs-title {
  color: var(--pink4) !important;
}

blockquote {
    margin-left: 30px;
    margin-top: 0px;
    margin-bottom: 16px;
    border-left-width: 3px;
    padding: 0 1em;
    color: var(--text-secondary);
    border-left: 4px solid var(--border-muted);
    padding-left: 15px;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic;
}

blockquote * {
    font-style: normal !important;
    letter-spacing: 0;
    color: var(--text-secondary);
}

table {
    font-size: var(--desktop-body-sm);
    overflow: auto;
    width: 100%;
    margin-bottom: var(--spacing-06);
    border-spacing: 0;
    border-collapse: collapse;
}

td {
    padding: var(--spacing-02) var(--spacing-05);
    border-top: none;
    border-right: none;
    border-bottom: 1px solid var(--border-muted);
    border-left: none;
}

td img {
    width: var(--spacing-08);
    height: var(--spacing-08);
    border-radius: var(--spacing-02);
}

td img:hover {
    cursor: context-menu;
}

th {
    font-weight: 700;
    padding: var(--spacing-02) var(--spacing-05);
    border-top: none;
    border-right: none;
    background-color: var(--background-secondary);
    border-bottom: 2px solid var(--border-strong);
    border-top: 2px solid var(--border-strong);
}

tr {
    background-color: var(--background);
    border-top: none;
    border-right: none;
    border-bottom: 1px solid var(--border-muted);
}

tr:hover {
    background-color: var(--background-high-contrast);
}

img {
    max-width: 100%;
}

p {
    line-height: var(--lh-desktop-body-sm);
    font-size: var(--desktop-body);
    color: var(--text-primary);
}

a:visited {
    color: var(--link-visited)
}

h1,
h2,
h3 {
    border-bottom: 1px solid var(--border-muted);
    padding-bottom: var(--spacing-03);
}

h4 {
    margin-bottom: var(--spacing-06);
}

.footnote {
    margin-top: var(--spacing-08);
    font-size: var(--desktop-body-sm);
    color: var(--text-secondary);
}

.toc-link {
    font-size: var(--desktop-body-sm);
    padding-right: var(--spacing-05);
}

@media only screen and (max-width: 600px) {
    table {
        display: block;
    }
    body {
        font-size: var(--mobile-body);
        line-height: var(--lh-mobile-body);
        margin: var(--spacing-07);
    }
    h1 { font-size: var(--mobile-heading-01); line-height: var(--lh-mobile-heading-01); letter-spacing: var(--mobile-tracking-heading-01);}
    h2 { font-size: var(--mobile-heading-02); line-height: var(--lh-mobile-heading-02); letter-spacing: var(--mobile-tracking-heading-02);}
    h3 { font-size: var(--mobile-heading-03); line-height: var(--lh-mobile-heading-03); letter-spacing: var(--mobile-tracking-heading-03);}
    h4 { font-size: var(--mobile-heading-04); line-height: var(--lh-mobile-heading-04);}
    h5 { font-size: var(--mobile-heading-05); line-height: var(--lh-mobile-heading-05);}
    h6 { font-size: var(--mobile-heading-06); line-height: var(--lh-mobile-heading-06);}
code { font-size: var(--mobile-code); line-height: var(--lh-mobile-code);}
}

